--- a/pom.xml
+++ b/pom.xml
@@ -184,13 +184,13 @@
 							<warName>ROOT</warName>
 						</configuration>
 					</plugin>
-					<plugin>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-maven-plugin</artifactId>
-						<configuration>
-							<classifier>boot</classifier>
-						</configuration>
-					</plugin>
+<!-- 					<plugin> -->
+<!-- 						<groupId>org.springframework.boot</groupId> -->
+<!-- 						<artifactId>spring-boot-maven-plugin</artifactId> -->
+<!-- 						<configuration> -->
+<!-- 							<classifier>boot</classifier> -->
+<!-- 						</configuration> -->
+<!-- 					</plugin> -->
 				</plugins>
 			</build>
 		</profile>
