--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
 		<start-class>br.com.cerveja.config.Application</start-class>
+		<log4j.version>1.2.17</log4j.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -166,9 +167,16 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>com.tj.brewerydb</groupId>
 			<artifactId>connector</artifactId>
-			<version>0.0.3</version>
+			<version>0.0.5</version>
 		</dependency>
 	</dependencies>
 	<profiles>
