--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.thymeleaf.cache: false
 security.basic.enabled: false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.jndi-name=jdbc/cervejaAPP
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jmx.enabled: false
 server.port = 8080
 spring.thymeleaf.mode=LEGACYHTML5
-logging.level.com.igumnov.seedproject: DEBUG
-logging.level.com: ERROR
-logging.level.org: ERROR
-logging.level.hsqldb: ERROR
+cloudinary.cloud_name=mundodacerveja
+cloudinary.api_key=366249413158599
+cloudinary.api_secret=RbfUY_7fuD4Z6MzCKZNT7J8SngM
+
