--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,18 @@
+#thymeleaf
 spring.thymeleaf.cache: false
+spring.thymeleaf.mode=LEGACYHTML5
+#security
 security.basic.enabled: false
+#Database
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.jndi-name=jdbc/cervejaAPP
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#Server
 spring.jmx.enabled: false
 server.port = 8080
-spring.thymeleaf.mode=LEGACYHTML5
-cloudinary.cloud_name=mundodacerveja
-cloudinary.api_key=366249413158599
-cloudinary.api_secret=RbfUY_7fuD4Z6MzCKZNT7J8SngM
-
+#messages
+spring.messages.basename=erro
+#Upload
+multipart.maxFileSize = 4Mb
+multipart.maxRequestSize = 20Mb
