--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -1,1 +1,7 @@
 apiKey=fec524048fd1c1bd6ac196268bbbd414
+
+cloudinary.cloud_name=mundodacerveja
+cloudinary.api_key=366249413158599
+cloudinary.api_secret=RbfUY_7fuD4Z6MzCKZNT7J8SngM
+
+upload.path=${catalina.base}/upload
