--- a/src/main/resources/erro.properties
+++ b/src/main/resources/erro.properties
@@ -1,3 +1,9 @@
 importador.erro=Erro ao importar Cerveja {0}
 cerveja.naoecontrada=Cerveja não econtrada!
 erro.upload=Ocorreu um erro ao fazer upload da cerveja {0}
+
+erro.usuario.email.null=Email obrigat\u00F3rio
+erro.usuario.email.invalido=Email inv\u00E1lido
+erro.usuario.password.invalido=Senha inv\u00E1lida min 5 max 8
+erro.usuario.nome.null=Nome obrigat\u00F3rio
+erro.usuario.naoencontrado=Usu\u00E1rio n\u00E3o encontrado
